trybuild-qcell/src/compiletest/qcell-13.stderr
error[E0277]: `Rc<i32>` cannot be sent between threads safely
   --> src/compiletest/qcell-13.rs:11:5
    |
11  |       std::thread::spawn(move || {    // Compile fail
    |  _____^^^^^^^^^^^^^^^^^^_-
    | |     |
    | |     `Rc<i32>` cannot be sent between threads safely
12  | |         assert_eq!(100, **owner.ro(&cell));
13  | |     }).join();
    | |_____- within this `[closure@$DIR/src/compiletest/qcell-13.rs:11:24: 13:6]`
    |
    = help: within `[closure@$DIR/src/compiletest/qcell-13.rs:11:24: 13:6]`, the trait `Send` is not implemented for `Rc<i32>`
    = note: required because it appears within the type `UnsafeCell<Rc<i32>>`
    = note: required because it appears within the type `QCell<Rc<i32>>`
    = note: required because it appears within the type `[closure@$DIR/src/compiletest/qcell-13.rs:11:24: 13:6]`
note: required by a bound in `spawn`
   --> $RUST/std/src/thread/mod.rs
    |
    |     F: Send + 'static,
    |        ^^^^ required by this bound in `spawn`
